# rec_sys_app

./: .gitignore  INSTALLATION.md  README.md  backup_user_tables_local.sh  backup_user_tables_server.sh  deploy_books_db.py  deploy_books_db_local.sh  deploy_books_db_server.sh  pyproject.toml  recsys.sublime-workspace  requirements.txt  restore_user_tables_local.sh  restore_user_tables_server.sh
config/: default.cfg  dev.cfg  prod.cfg
data/: add_new_custom_data.py  load_book_crossings.py  load_custom.py  load_goodreads.py  load_isfdb_virtual.py  load_super_rater.py
mysite/: secret_keys.py  settings.py  urls.py  views.py  wsgi.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/static/polls/: style.css
polls/templates/polls/: base.html  book.html  book_row_item.html  home.html  index.html  search_results.html
polls/templatetags/: isfdb_image_handling.py
recsys/: admin.py  apps.py  models.py  search_functions.py  urls.py  views.py
recsys/migrations/: 0001_initial.py
recsys/static/recsys/: robots.txt  style.css
recsys/static/recsys/scripts/htmx/1.9.5/: htmx.min.js
recsys/templates/: 404.html  500.html
recsys/templates/recsys/: about.html  base.html  blocked.html  blog.html  book.html  book_row_item.html  firstratings.html  home.html  ratings.html  recommendations.html  saved.html  search_results.html  secondratings.html
recsys/templates/recsys/blog/: technical_overview.html
recsys/templatetags/: isfdb_image_handling.py
scripts/: backup_user_tables_local.sh  deploy_new_books.sh  download_isfdb_images.py  print_config.py  restore_user_tables_local.sh  restore_user_tables_server.sh
templates/admin/: base_site.html
templates/registration/: account.html  account_delete.html  account_delete_done.html  displayname_change.html  displayname_change_done.html  email_change.html  email_change_done.html  login.html  password_change.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  signup.html  test.html  username_change.html  username_change_done.html
tuning/: customFolds.py  customSurpriseClasses.py  tune.py  tune_update_methods.py
