[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rec_sys_app"
description = "A recommendation system web app for books"
version = "2.1.0"
authors = [
  {name = "Justin Lavoie"},
  {email = "justin.lavoie@post.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "Django == 4.1.5",
  "django-q==1.3.9",
  "gdown == 4.6.0",
  "lxml == 4.9.1",
  "numpy == 1.24.1",
  "pandas == 1.5.2",
  "psycopg2 == 2.9.5",
  "scipy == 1.10.0",
  "SQLAlchemy == 1.4.46",
  "surprise == 0.1"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "Flake8-pyproject",
  "pipreqs",
  "pylint",
  "pylint-django",
]

[tool.setuptools]
  py-modules = []

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
skip = [".git", ".env", "data", ".recsys/static", "recsys/migrations"]

[tool.flake8]
extend-ignore = ["E203", "W503"]
exclude = [".git", ".env", "data", ".recsys/static", "recsys/migrations"]

[tool.pylint]
load-plugins = "pylint_django"
recursive = true
disable = ["C0103","C0114","C0115","C0116","R0901","R0912","R0914","R0915"]
ignore = [".env", ".git", "data", ".recsys/static", "recsys/migrations"]