[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rec_sys_app"
description = "A recommendation system web app for books"
version = "3.1.0"
authors = [
  {name = "Justin Lavoie"},
  {email = "justin.lavoie@post.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  # Direct dependencies
  "Django==5.1",
  "gdown==5.2.0",
  "lxml==5.3.0",
  # numpy<2
  "numpy==1.26.4",
  # pandas<2.2
  "pandas==2.1.4",
  "psycopg2==2.9.9",
  "scikit-surprise==1.1.4",
  "scipy==1.14.0",
  # SQLAlchemy<2
  "SQLAlchemy==1.4.53",

  # Transitive dependencies
  "asgiref==3.8.1",
  "beautifulsoup4==4.12.3",
  "certifi==2024.7.4",
  "charset-normalizer==3.3.2",
  "filelock==3.15.4",
  "greenlet==3.0.3",
  "idna==3.7",
  "joblib==1.4.2",
  "PySocks==1.7.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.1",
  "requests==2.32.3",
  "six==1.16.0",
  "soupsieve==2.6",
  "sqlparse==0.5.1",
  "tqdm==4.66.5",
  "tzdata==2024.1",
  "urllib3==2.2.2",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "Flake8-pyproject",
  "pylint",
  "pylint-django",
]

[tool.setuptools]
  py-modules = []

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
skip = [
  ".git",
  ".env",
  "backup",
  "data",
  "recsys/static",
  "recsys/migrations"
]

[tool.flake8]
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  ".env",
  "backup",
  "data",
  "recsys/static",
  "recsys/migrations"
]

[tool.pylint]
load-plugins = "pylint_django"
recursive = true
disable = ["C0103","C0114","C0115","C0116","R0901","R0912","R0914","R0915"]
ignore = [
  ".git",
  ".env",
  "backup",
  "data",
  "recsys/static",
  "recsys/migrations"
]
